- update example and adjust code